--- a/style.css
+++ b/style.css
@@ -50,6 +50,26 @@ img {
     border-radius: 5px 25px;
 }
 
+
+/*==============
+back to top button css
+==============*/
+
+#gotop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    background-color: #000;
+    color: #fff;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 30%;
+}
+
+
 /*==============
 header css
 ==============*/
@@ -146,8 +166,12 @@ header bottom / nav bar css
     z-index: 9999
 }
 
+button.navbar-toggler {
+    margin-left: 415px
+}
+
 .main-menu img {
-    max-width: 75%;
+    max-width: 80%;
 }
 
 .main-menu ul li a {
@@ -228,7 +252,9 @@ hero section css
 /***********
 about section 
 ***********/
-
+.about-wrapper {
+    padding: 40px 0;
+}
 
 .about-section-text p {
     font-size: 15px;
@@ -270,6 +296,17 @@ about section
 /***********
 service  (some class also used on software section)
 ***********/
+.service {
+    padding: 40px 0;
+
+}
+
+.service h2 {
+    font-size: 28;
+    font-weight: 700;
+    line-height: 34px;
+    color: #343434
+}
 
 .service_style {
     box-shadow: 5px 10px 5px #f2f2f2;
@@ -345,6 +382,17 @@ service  (some class also used on software section)
 /***********
 software 
 ***********/
+.software {
+    padding: 40px 0;
+
+}
+
+.software h2 {
+    font-size: 28;
+    font-weight: 700;
+    line-height: 34px;
+    color: #343434
+}
 
 .software-title {
     font-size: 15px;
@@ -527,8 +575,14 @@ contact section
     background-color: #ddd
 }
 
+.contact-wrapper {
+    padding: 40px 0;
+}
+
+
 .black-h {
     color: #000;
+    padding: 14px 0;
     font-size: 18px;
     font-weight: 700;
 }
@@ -548,10 +602,14 @@ contact section
 
 
 
+
 .infobox {
     color: #fff;
+    padding: 20px;
     margin-bottom: 20px;
 }
+
+
 
 .info-box-style {
     background-color: #3458B6;
@@ -568,9 +626,6 @@ contact section
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.white-h {
-    color: #fff
-}
 
 
 /***********
@@ -698,3 +753,59 @@ Footer section
     background-color: #000;
     padding: 20px 0
 }
+
+
+
+
+
+/***********
+Responsive css
+***********/
+
+/*******
+Mobile devices
+******/
+
+@media (max-width:480px) {
+    .main-menu img {
+        max-width: 200px;
+    }
+
+    .top-address {
+        visibility: hidden;
+    }
+
+}
+
+/*******
+ iPads, Tablets devices
+******/
+
+@media (max-width:768px) {
+    .main-menu img {
+        max-width: 200px;
+    }
+
+    .top-address {
+        visibility: hidden;
+    }
+
+}
+
+/*******
+Small screens, laptops
+******/
+
+@media (max-width:1024px) {
+    .main-menu img {
+        max-width: 200px;
+    }
+
+
+}
+
+/*******
+Desktops, large screens
+******/
+
+@media (max-width:1200px) {}
