--- a/style.css
+++ b/style.css
@@ -135,9 +135,7 @@ top-contact-ul li a {
     color: #fff;
 }
 
-.top-contact-li {
-    padding-left: 25px;
-}
+
 
 .top-contact-li a:hover {
     color: #fff;
@@ -151,7 +149,9 @@ header bottom / nav bar css
     background-color: #fff;
     border-bottom: solid 1px #ff7104
 }
-
+.navbar-toggler:focus {
+    box-shadow: 1 0 0 var(--bs-navbar-toggler-focus-width)
+}
 
 /*js functional class for sticky head */
 
@@ -166,9 +166,7 @@ header bottom / nav bar css
     z-index: 9999
 }
 
-button.navbar-toggler {
-    margin-left: 415px
-}
+
 
 .main-menu img {
     max-width: 80%;
@@ -605,8 +603,6 @@ contact section
 
 .infobox {
     color: #fff;
-    padding: 20px;
-    margin-bottom: 20px;
 }
 
 
@@ -624,6 +620,69 @@ contact section
 .infodetails {
     padding: 0 0 0 10px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/*==========
+contact page css
+=======*/
+
+
+.has-feedback {
+    position: relative;
+}
+
+.form-control-feedback {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    line-height: 42px !important;
+    top: 40%;
+    right: 0;
+    z-index: 2;
+    text-align: center;
+    pointer-events: none;
+}
+.pencil-icon {
+    top: 25% !important;
+}
+ 
+    
+input.submit-button.btn.btn-default {
+    background: red;
+    margin: 20px 0;
+    padding: 5px 25px;
+    color: #fff;
+}
+
+
+/*==========
+address section 
+==========*/
+
+.sidebar {
+    box-shadow: 5px 10px 5px #f2f2f2;
+    margin: 20px 0px;
+    padding: 20px 0px;
+    border: 1px solid #d8e3f6;
+    border-radius: 12px;
+    transition: 1.1s;
+}
+
+.vertical-divider-left {
+    border-left: 1px solid #eeeeee;
+    padding-left: 50px;
+    margin-left: 20px;
+}
+
+.sidebar .title {
+    margin-bottom: 15px;
+    margin-top: 20px;
+    position: relative;
+}
+
+.list li {
+    padding: 5px 0;
 }
 
 
@@ -758,54 +817,3 @@ Footer section
 
 
 
-/***********
-Responsive css
-***********/
-
-/*******
-Mobile devices
-******/
-
-@media (max-width:480px) {
-    .main-menu img {
-        max-width: 200px;
-    }
-
-    .top-address {
-        visibility: hidden;
-    }
-
-}
-
-/*******
- iPads, Tablets devices
-******/
-
-@media (max-width:768px) {
-    .main-menu img {
-        max-width: 200px;
-    }
-
-    .top-address {
-        visibility: hidden;
-    }
-
-}
-
-/*******
-Small screens, laptops
-******/
-
-@media (max-width:1024px) {
-    .main-menu img {
-        max-width: 200px;
-    }
-
-
-}
-
-/*******
-Desktops, large screens
-******/
-
-@media (max-width:1200px) {}
