--- a/about us/style.css
+++ b/about us/style.css
@@ -395,6 +395,7 @@ Footer section
 .main-footer .col-md-6 .col-sm-6 .list-icons li {
     font-size: 14px;
     line-height: 21px;
+    margin-top: 20px;
 
 }
 
