--- a/style.css
+++ b/style.css
@@ -547,7 +547,7 @@ slider button css
     background-color: #db4d3f;
     position: absolute;
     top: 100%;
-    left: 5px;
+    left: 1%;
 
 }
 
@@ -555,7 +555,7 @@ slider button css
     background-color: #db4d3f;
     position: absolute;
     top: 100%;
-    right: 95%
+    right: 90%
 }
 
 .slick-prev:before {
@@ -631,10 +631,10 @@ contact section
 }
 
 
-
-
 .infobox {
     color: #fff;
+    margin: 10px 0;
+    padding: 10px;
 }
 
 
@@ -701,15 +701,10 @@ address section
     transition: 1.1s;
 }
 
-.vertical-divider-left {
-    border-left: 1px solid #eeeeee;
-    padding-left: 50px;
-    margin-left: 20px;
-}
+
 
 .sidebar .title {
-    margin-bottom: 15px;
-    margin-top: 20px;
+        margin: 20px 0 20px 30px;
     position: relative;
 }
 
@@ -840,7 +835,9 @@ Footer section
 
 }
 
-
+.map{
+    padding: 20px 5px;
+}
 .sub-footer {
     background-color: #000;
     padding: 20px 0
